--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ panic = "abort"
 panic = "abort"
 
 [dependencies]
-bootloader = "0.6.0"
+bootloader = { version = "0.6.4", features = ["map_physical_memory"]}
 volatile = "0.2.3"
 spin = "0.4.9"
 x86_64 = "0.7.0"
